name:                pipeclip
version:             0.1.0.0
synopsis:            Open your editor, pipe the output to the system clipboard
description:         
  This opens up your @$EDITOR@ or @$VISUAL@ using the 
  <https://hackage.haskell.org/package/editor-open @editor-open@ library.> It
  then takes the edited text and sends it to the X11 clipboard.
  .
  As such, this will only work if you have X11. Translated, this is limited to
  Linux and BSD.
homepage:            https://github.com/pharpend/pipeclip
license:             BSD2
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2015, Peter Harpending.
category:            System, Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable pipeclip
  main-is:             pipeclip.hs
  -- other-modules:       
  -- other-extensions:    
  default-language:    Haskell2010
  build-depends:
      base ==4.*
  
